--- a/weatherGift/Base.lproj/Main.storyboard
+++ b/weatherGift/Base.lproj/Main.storyboard
@@ -124,7 +124,11 @@
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7r7-5F-ipl">
                                 <rect key="frame" x="0.0" y="623" width="375" height="44"/>
                                 <items>
-                                    <barButtonItem title="Edit" id="k7G-cK-iW6"/>
+                                    <barButtonItem title="Edit" id="k7G-cK-iW6">
+                                        <connections>
+                                            <action selector="editBarButtonPressed:" destination="PDx-nz-lbs" id="sox-vi-mQh"/>
+                                        </connections>
+                                    </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="grc-Xj-T58"/>
                                     <barButtonItem systemItem="add" id="FYn-eC-TXT"/>
                                 </items>
@@ -143,6 +147,8 @@
                         <viewLayoutGuide key="safeArea" id="ZUR-eB-ccy"/>
                     </view>
                     <connections>
+                        <outlet property="addBarButton" destination="FYn-eC-TXT" id="bsI-QR-Pbg"/>
+                        <outlet property="editBarButton" destination="k7G-cK-iW6" id="bM9-C3-Tpg"/>
                         <outlet property="tableView" destination="dJr-Wp-mda" id="55P-Uv-F9c"/>
                     </connections>
                 </viewController>
