--- a/weatherGift/Base.lproj/Main.storyboard
+++ b/weatherGift/Base.lproj/Main.storyboard
@@ -25,7 +25,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="i6U-5O-aua">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="i6U-5O-aua">
                                 <rect key="frame" x="0.0" y="20" width="375" height="225"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9Oo-xC-OMP">
@@ -66,6 +66,7 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="i6U-5O-aua" secondAttribute="bottom" constant="422" id="1bD-lR-y3S"/>
                             <constraint firstItem="i6U-5O-aua" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="65m-7N-RR1"/>
                             <constraint firstItem="i6U-5O-aua" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="JSQ-pr-zmn"/>
                             <constraint firstItem="i6U-5O-aua" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="olh-2J-Frn"/>
